v1.2.x/get-started/validators/validator-guide.mdx
---
title: Validator Guide
sidebarTitle: Validator Guide
description: 'Opt into mev-commit with ease. This guide covers everything you need to passively opt-in to mev-commit as an L1 validator.'
---

## Why Participate?

Participation of L1 validators in the mev-commit protocol increases the credibility of preconfs made through mev-commit and consequently their value. Due to increased preconf values, providers have additional value to bid in the mev-boost auction, thus driving up the total revenue a proposer will get.

## Requirements

1. An operational L1 validator node.
2. An operational mev-boost or other sidecar.
3. 3 ETH worth of stake or restake per validator, or 1,000 ETH worth per operator entity.

<Warning>
As a validator opting into the mev-commit protocol, ensure your mev-boost client only connects to mev-commit opted-in relays to avoid slashing for proposing blocks without delivering commitments.
</Warning>

By opting-in to the mev-commit protocol as a validator **in one of the three forms described**, you agree to only use **opted-in relays**. These opted-in relays will only forward mev-boost bids from addresses that have registered with the mev-commit provider registry, such that providers can be slashed in case of a protocol violation. We generally don't anticipate validator slashing events, as this allows validators to passively opt-in to mev-commit, letting block builders and relays do the work.

### Supporting Relays

#### Mainnet

| Relay | Docs |
|-------|------|
| Titan | [docs.titanrelay.xyz](https://docs.titanrelay.xyz/) |
| Aestus | [mainnet.aestus.live](https://mainnet.aestus.live/) |
| Bloxroute Max Profit | [https://bloxroute.max-profit.blxrbdn.com/](https://0x8b5d2e73e2a3a55c6c87b8b6eb92e0149a125c852751db1422fa951e42a09b82c142c3ea98d0d9930b056a3bc9896b8f@bloxroute.max-profit.blxrbdn.com) |
| Bloxroute Regulated | [https://bloxroute.regulated.blxrbdn.com/](https://0xb0b07cd0abef743db4260b0ed50619cf6ad4d82064cb4fbec9d3ec530f7c5e6793d9f286c4e082c0244ffb9f2658fe88@bloxroute.regulated.blxrbdn.com) |

<Accordion title="Hoodi">

| Relay | Docs |
|-------|------|
| Titan | [hoodi.titanrelay.xyz](https://0xaa58208899c6105603b74396734a6263cc7d947f444f396a90f7b7d3e65d102aec7e5e5291b27e08d02c50a050825c2f@hoodi.titanrelay.xyz) |
| Aestus | [hoodi-helix.aestus.live](https://0x98f0ef62f00780cf8eb06701a7d22725b9437d4768bb19b363e882ae87129945ec206ec2dc16933f31d983f8225772b6@hoodi-helix.aestus.live) |
| Bloxroute | [bloxroute.hoodi.blxrbdn.com](https://0x821f2a65afb70e7f2e820a925a9b4c80a159620582c1766b1b09729fec178b11ea22abb3a51f07b288be815a1a2ff516@bloxroute.hoodi.blxrbdn.com) |
| Ultrasound (Filtered) | [relay-filtered-hoodi.ultrasound.money](https://0xb1559beef7b5ba3127485bbbb090362d9f497ba64e177ee2c8e7db74746306efad687f2cf8574e38d70067d40ef136dc@relay-filtered-hoodi.ultrasound.money) |
| Ultrasound (Unfiltered) | [relay-hoodi.ultrasound.money](https://0xb1559beef7b5ba3127485bbbb090362d9f497ba64e177ee2c8e7db74746306efad687f2cf8574e38d70067d40ef136dc@relay-hoodi.ultrasound.money) |

</Accordion>

If you are a relay looking to join the mev-commit network please visit our [Relays page](/v1.2.x/get-started/relays) to get more information.

Proposers who fallback to local block production, from either a fault in the mev-boost software or a lack of economically viable block bids, **will not be slashed**. See [flashbots docs](https://docs.flashbots.net/flashbots-mev-boost/architecture-overview/risks#liveness-and-local-fallback) for more on this scenario. The protocol may in the future slash for abuse of this local fallback mechanism.

## Choose Your Opt-In Method

Note each validator pubkey should only opt-in using one of the three methods described below.

<CardGroup cols={3}>
  <Card title="Eigenlayer Restaking" icon="coins">
    [Click here](/v1.2.x/get-started/validators/eigenlayer) for more information on native restaking with mev-commit's AVS
  </Card>
  <Card title="Symbiotic Restaking" icon="coins">
    [Click here](/v1.2.x/get-started/validators/symbiotic) for more information on ERC20 restaking with mev-commit's middleware contract
  </Card>
  <Card title="Simple Staking" icon="layer-group">
    [Click here](/v1.2.x/get-started/validators/vanilla) for more information on "vanilla" staking with mev-commit
  </Card>
</CardGroup>

## Protocol Design

To learn more about the protocol design for any of the registries, see their respective READMEs:

* [MevCommitMiddleware](https://github.com/primev/mev-commit/tree/main/contracts/contracts/validator-registry/middleware#readme)
* [MevCommitAVS](https://github.com/primev/mev-commit/blob/main/contracts/contracts/validator-registry/avs/README.md)
* [VanillaRegistry](https://github.com/primev/mev-commit/tree/main/contracts/contracts/validator-registry#vanilla-registry---simple-staking-solution)

To query the on-chain parameters of any registry (on mainnet or Hoodi), run an example forge script like [this](https://github.com/primev/mev-commit/blob/main/contracts/scripts/validator-registry/GetParams.s.sol).

---

## Learn More

<Card title="Why Should Validators Opt In?" icon="circle-question" href="/v1.2.x/knowledge-base/why-should-validators-opt-in" horizontal>
  FAQ on the incentive model and what validators earn by opting in.
</Card>
